--- a/client/src/components/Home/hero.scss
+++ b/client/src/components/Home/hero.scss
@@ -2,6 +2,20 @@
 .hero {
   height: calc(100vh - 70px);
   background-color: white;
+  overflow-y: hidden;
+
+  @media (max-width: 880px) {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding-top: 20px;
+    .upvote{
+      position: relative;
+      right: 30px;
+    }
+    .left{
+      margin-left: 80px;
+    }
+  }
 
   font-family: "Roboto", sans-serif;
   display: flex;
@@ -29,6 +43,9 @@
       text-decoration: none;
       background-color: #da0183;
       margin-top: 60px;
+      @media(max-width:880px){
+        margin-top: 30px;
+      }
       color: white;
       border: none;
       padding: 12px 24px;
@@ -42,8 +59,9 @@
       }
     }
   }
+
   .upvote {
-    width: 50%;
+    width: 100%;
     height: 300px;
   }
 }
